move the defaults config file under the config directory